--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<script type="text/javascript" src="js/snow.js"></script> -->
 		<link rel="stylesheet" href="./css/style.css" />
 		<!--浏览器标签ico-->
-		<link rel="shortcut icon" href="./images/get_started16.png" />
+		<link rel="shortcut icon" href="https://ghproxy.com/https://github.com/Codebglh/codebglh.github.io/blob/main/images/get_started16.png" />
 		<!--苹果桌面标题-->
 		<meta name="apple-mobile-web-app-title" content="VIP视频全网解析">
 		<!--苹果桌面图标-->
