--- a/options.html
+++ b/options.html
@@ -3,6 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 <head>
+    <link rel="shortcut icon" href="https://ghproxy.com/https://github.com/Codebglh/codebglh.github.io/blob/main/images/get_started16.png" />
     <link rel="stylesheet" href="./css/2.css">
     <link rel="stylesheet" href="./css/reset.css" media="screen">
     <link rel="stylesheet" href="./css/style1.css" media="screen">
