--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>视频解析播放器</title>
+    <link rel="icon" src="icon/img">
     <link rel="stylesheet" href="css/a.css">
     <script src="js/video.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dplayer@1.27.0/dist/DPlayer.min.js"></script>
@@ -13,22 +14,22 @@
 
 
     <script type="text/javascript">
-        window.onload = function() {
+        window.onload = function () {
             jiekou();
         }
     </script>
 </head>
 
 <body>
-    <div id="box1">
-        <div id="box"></div>
+<div id="box1">
+    <div id="box"></div>
 
-        <div id="search">
-            <input id="url_1" type="text" placeholder="请输入链接地址 " value="https://c2.monidai.com/20221103/FxQWVnxP/index.m3u">
-            <select name="" id="jk"></select>
-            <button onclick="main()">播放</button>
-        </div>
+    <div id="search">
+        <input id="url_1" type="text" placeholder="请输入链接地址 " value="https://c2.monidai.com/20221103/FxQWVnxP/index.m3u">
+        <select name="" id="jk"></select>
+        <button onclick="main()">播放</button>
     </div>
+</div>
 
 </body>
 
