--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>视频解析播放器</title>
-    <link rel="icon" src="icon/img">
+    <link rel="icon" src="icon/dicon.ico">
     <link rel="stylesheet" href="css/a.css">
     <script src="js/video.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dplayer@1.27.0/dist/DPlayer.min.js"></script>
