--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
 
 
     <script type="text/javascript">
-        window.onload = function () {
+        window.onload = function() {
             jiekou();
         }
     </script>
 </head>
 
 <body>
-<div id="box1">
-    <div id="box"></div>
+    <div id="box1">
+        <div id="box"></div>
 
-    <div id="search">
-        <input id="url_1" type="text" placeholder="请输入链接地址 " value="https://c2.monidai.com/20221103/FxQWVnxP/index.m3u">
-        <select name="" id="jk"></select>
-        <button onclick="main()">播放</button>
+        <div id="search">
+            <input id="url_1" type="text" placeholder="请输入链接地址 " value="https://c2.monidai.com/20221103/FxQWVnxP/index.m3u8">
+            <select name="" id="jk"></select>
+            <button onclick="main()">播放</button>
+        </div>
     </div>
-</div>
 
 </body>
 
