--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <script src="https://cdn.jsdelivr.net/npm/hls.js@1.2.7/dist/hls.min.js"></script>
 
 
-    <script type="text/javascript">
-        window.onload = function() {
-            jiekou();
-        }
-    </script>
+<!--    <script type="text/javascript">-->
+<!--        window.onload = function() {-->
+<!--            jiekou();-->
+<!--        }-->
+<!--    </script>-->
 </head>
 
 <body>
@@ -26,7 +26,7 @@
 
         <div id="search">
             <input id="url_1" type="text" placeholder="请输入链接地址 " value="https://c2.monidai.com/20221103/FxQWVnxP/index.m3u8">
-            <select name="" id="jk"></select>
+<!--            <select name="" id="jk"></select>-->
             <button onclick="main()">播放</button>
         </div>
     </div>
