--- a/index.html
+++ b/index.html
@@ -11,13 +11,6 @@
     <script src="js/video.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dplayer@1.27.0/dist/DPlayer.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/hls.js@1.2.7/dist/hls.min.js"></script>
-
-
-<!--    <script type="text/javascript">-->
-<!--        window.onload = function() {-->
-<!--            jiekou();-->
-<!--        }-->
-<!--    </script>-->
 </head>
 
 <body>
@@ -25,8 +18,7 @@
         <div id="box"></div>
 
         <div id="search">
-            <input id="url_1" type="text" placeholder="请输入链接地址 " value="https://c2.monidai.com/20221103/FxQWVnxP/index.m3u8">
-<!--            <select name="" id="jk"></select>-->
+            <input id="url" type="text" placeholder="请输入链接地址 " value="">
             <button onclick="main()">播放</button>
         </div>
     </div>
