--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
 <body>
     <div id="box1">
-        <div id="box"></div>
+        <div id="box">
+            <div id="dplayer"></div>
+        </div>
 
         <div id="search">
             <input id="url" type="text" placeholder="请输入链接地址 " value="">
