--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="icon" href="icon/favicon.png">
     <link rel="stylesheet" href="css/a.css">
     <script src="js/video.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/dplayer@1.27.0/dist/DPlayer.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/hls.js@1.2.7/dist/hls.min.js"></script>
+    <script src="js/DPlayer.min.js"></script>
+    <script src="js/hls.js"></script>
 </head>
 
 <body>
@@ -26,6 +26,7 @@
     </div>
 
 </body>
-
+    <!-- <script src="https://cdn.jsdelivr.net/npm/dplayer@1.27.0/dist/DPlayer.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/hls.js@1.2.7/dist/hls.min.js"></script> -->
 
 </html>
